--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,9 +20,10 @@
             inlineMath: [["$", "$"], ["$$", "$$"], ["\\(", "\\)"]],
             processEscapes: true,
         },
+        "showMathMenu": false,
     });
     </script>
-    <script type="text/javascript" async src="static/MathJax/MathJax.js?config=TeX-AMS_SVG-full"></script>
+    <script type="text/javascript" async src="static/MathJax/MathJax.js?config=TeX-AMS_CHTML-full"></script>
 
   </head>
   <body>
